# synctv

./: .dockerignore  .gitignore  CNAME  COMPREHENSIVE_PRODUCTION_ANALYSIS.md  Cargo.toml  Dockerfile  E2E_TEST_RESULTS.md  EMAIL_VERIFICATION_STATUS.md  IMPLEMENTATION_STATUS.md  JWT_MIGRATION.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_ANALYSIS.md  README.md  SESSION_SUMMARY.md  TESTING_PLAN.md  TEST_RESULTS.md  TODO.md  config.example.yaml  config.yaml  deny.toml  docker-compose.yml  index.html  test_const
synctv/: Cargo.toml
synctv-api/: Cargo.toml  build.rs
synctv-api/src/: lib.rs  main.rs  proto.rs
synctv-api/src/grpc/: admin_service.rs  blacklist_layer.rs  client_service.rs  interceptors.rs  message_handler.rs  mod.rs  notification_service.rs  provider_registration.rs
synctv-api/src/http/: admin.rs  auth.rs  chat.rs  email_verification.rs  error.rs  health.rs  live.rs  media.rs  media_proxy.rs  middleware.rs  mod.rs  notifications.rs  oauth2.rs  openapi.rs  provider_common.rs  provider_routes.rs  public.rs  publish_key.rs  room.rs  room_extra.rs  ticket.rs  user.rs  validation.rs  webrtc.rs  websocket.rs
synctv-api/src/impls/: admin.rs  client.rs  email.rs  messaging.rs  mod.rs  notification.rs
synctv-api/src/observability/: metrics.rs  metrics_middleware.rs  mod.rs
synctv-cluster/: Cargo.toml  build.rs
synctv-cluster/proto/: cluster.proto
synctv-cluster/src/: error.rs  lib.rs
synctv-cluster/src/discovery/: health_monitor.rs  k8s_dns.rs  load_balancer.rs  mod.rs  node_registry.rs
synctv-cluster/src/grpc/: client.rs  mod.rs  server.rs
synctv-cluster/src/sync/: cluster_manager.rs  connection_manager.rs  dedup.rs  events.rs  mod.rs  redis_pubsub.rs  room_hub.rs
synctv-core/: Cargo.toml
synctv-core/benches/: auth_service.rs
synctv-core/migrations/: 010_provider_instances.sql
synctv-core/src/: config.rs  error.rs  lib.rs  logging.rs  metrics.rs  oauth2_config_example.rs  resilience.rs  secrets.rs  telemetry.rs  test_helpers.rs  transaction.rs  validation.rs
synctv-core/src/bootstrap/: config.rs  database.rs  mod.rs  services.rs  user.rs
synctv-core/src/cache/: bloom_filter.rs  invalidation.rs  key_builder.rs  manager.rs  mod.rs  room_cache.rs  singleflight.rs  user_cache.rs  username_cache.rs
synctv-core/src/models/: chat.rs  id.rs  media.rs  mod.rs  notification.rs  oauth2_client.rs  pagination.rs  permission.rs  playback.rs  playlist.rs  provider_instance.rs  room.rs  room_member.rs  settings.rs  user.rs
synctv-core/src/oauth2/: config.rs  mod.rs
synctv-core/src/provider/: README.md  alist.rs  bilibili.rs  config.rs  context.rs  direct_url.rs  emby.rs  error.rs  live_proxy.rs  mod.rs  provider_client.rs  registry.rs  rtmp.rs  traits.rs
synctv-core/src/repository/: chat.rs  email_token.rs  filter.rs  media.rs  mod.rs  notification.rs  playback.rs  playlist.rs  provider_instance.rs  room.rs  room_member.rs  room_optimized.rs  room_settings.rs  settings.rs  user.rs  user_oauth_provider.rs  user_optimized.rs
synctv-core/src/service/: audit.rs  audit_partition_manager.rs  chat.rs  chat_partition_manager.rs  content_filter.rs  credential_encryption.rs  distributed_lock.rs  email.rs  email_templates.rs  email_token.rs  global_settings.rs  media.rs  member.rs  mod.rs  notification.rs  oauth2.rs  permission.rs  playback.rs  playlist.rs  provider_instance_manager.rs  providers_manager.rs  publish_key.rs  rate_limit.rs  remote_provider_manager.rs  room.rs  room_settings.rs  room_tests.rs  settings.rs  settings_vars.rs  stun.rs  token_blacklist.rs  turn.rs  turn_server.rs  user.rs  user_notification.rs  ws_ticket.rs
synctv-core/tests/: integration_tests.rs
synctv-livestream/: Cargo.toml  build.rs
synctv-livestream/api/: livestream.rs  mod.rs  tracker.rs
synctv-livestream/libraries/: mod.rs
synctv-livestream/libraries/gop_cache/: mod.rs
synctv-livestream/libraries/storage/: file.rs  memory.rs  mod.rs
synctv-livestream/proto/: stream.proto
synctv-livestream/protocols/: mod.rs
synctv-livestream/protocols/hls/: mod.rs  remuxer.rs  server.rs
synctv-livestream/protocols/httpflv/: mod.rs  session.rs
synctv-livestream/protocols/rtmp/: auth.rs  auth_impl.rs  handler.rs
synctv-livestream/relay/: mod.rs  publisher.rs  publisher_manager.rs  puller.rs  registry.rs  registry_trait.rs
synctv-livestream/src/: error.rs  lib.rs  util.rs
synctv-livestream/src/api/: livestream.rs  mod.rs  tracker.rs
synctv-livestream/src/grpc/: hls_proxy.rs  mod.rs  stream_puller.rs  stream_relay_service.rs
synctv-livestream/src/livestream/: external_publish_manager.rs  external_puller.rs  mod.rs  (+6 more)
synctv-livestream/tests/: livestream_integration_test.rs  path_handling_test.rs
synctv-media-providers/: Cargo.toml  README.md  build.rs
synctv-media-providers/proto/: alist.proto  bilibili.proto  emby.proto
synctv-media-providers/src/: error.rs  lib.rs  rtmp.rs
synctv-proto/: Cargo.toml  build.rs
synctv-proto/proto/: admin.proto  client.proto  common.proto
synctv-proto/src/: lib.rs  synctv.admin.rs  synctv.client.rs  synctv.common.rs  synctv.provider.alist.rs  synctv.provider.emby.rs  synctv_client.rs
synctv-providers/: Cargo.toml  README.md  build.rs
synctv-providers/proto/: bilibili.proto  emby.proto
synctv-providers/src/: lib.rs  rtmp.rs
synctv-proxy/: Cargo.toml
synctv-proxy/src/: lib.rs  mpd.rs
synctv-sfu/: Cargo.toml
synctv-sfu/src/: config.rs  lib.rs  manager.rs  network_monitor.rs  peer.rs  room.rs  track.rs  types.rs
synctv-stream/: Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
synctv-stream/api/: mod.rs  streaming.rs
synctv-stream/libraries/: gop_cache.rs  storage.rs
synctv-stream/proto/: stream.proto
synctv-stream/protocols/: hls.rs  httpflv.rs  rtmp.rs
synctv-stream/relay/: publisher.rs  publisher_manager.rs  puller.rs  registry.rs  registry_trait.rs
synctv-stream/src/: error.rs  lib.rs  main.rs
synctv-stream/tests/: path_handling_test.rs  streaming_integration_test.rs
synctv-xiu/: Cargo.toml  README.md
synctv-xiu/src/: lib.rs
synctv/src/: main.rs  migrations.rs  server.rs
(+346 files in other folders)
