[workspace]
members = [
    # SyncTV crates
    "synctv-proto",
    "synctv-core",
    "synctv-proxy",
    "synctv-api",
    "synctv-livestream",
    "synctv-cluster",
    "synctv-media-providers",
    "synctv", "synctv-sfu",
    # xiu consolidated crate
    "synctv-xiu",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SyncTV Contributors"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-stream = "0.1"

# gRPC & Protobuf
tonic = { version = "0.12", default-features = false, features = ["transport", "tls-roots", "prost", "codegen"] }
tonic-web = "0.12"
tonic-reflection = "0.12"
tonic-health = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"

# HTTP Framework
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = [
    "trace",
    "compression-full",
    "limit",
    "timeout",
    "cors",
] }
hyper = { version = "1.0", default-features = false, features = ["http1", "http2", "server", "client"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
sea-query = "0.30"

# Redis
redis = { version = "0.26", features = [
    "tokio-comp",
    "connection-manager",
    "streams",
    "cluster",
    "tokio-rustls-comp",
    "script",
] }

# Security
argon2 = "0.5"
jsonwebtoken = "9.3"
oauth2 = "4.4"
aes-gcm = "0.10"
ammonia = "4.0"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
dashmap = "6.0"
lru = "0.12"

# IDs & Crypto
nanoid = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }
rand = "0.8"
base64 = "0.22"
humantime = "2.1"
hex = "0.4"

# WebRTC
webrtc = "0.11"

# STUN server (turn-rs, STUN-only mode)
turn-server = { git = "https://github.com/mycrl/turn-rs", default-features = false, features = ["udp"] }

# Streaming (consolidated xiu crate)
synctv-xiu = { path = "synctv-xiu" }

# Object Storage
opendal = { version = "0.49", features = ["services-s3"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2"

# Configuration
config = "0.14"
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.9"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
hostname = "0.4"
url = "2.5"
percent-encoding = "2.3"
regex = "1.10"

# Monitoring
prometheus = "0.14.0"

# OpenAPI
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7.1", features = ["axum"] }

# Time
chrono = { version = "0.4", features = ["serde"] }


# Networking
ipnet = "2.10"

# Initialization
ctor = "0.2"

# Data Structures
growable-bloom-filter = "2.1"
async_singleflight = "0.6"

# HTTP Body
http-body-util = "0.1"

# Testing
mockall = "0.13"
wiremock = "0.6"
tempfile = "3.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Internal workspace crates
synctv-proto = { path = "synctv-proto" }
synctv-core = { path = "synctv-core" }
synctv-api = { path = "synctv-api" }
synctv-cluster = { path = "synctv-cluster" }
synctv-media-providers = { path = "synctv-media-providers" }
synctv-proxy = { path = "synctv-proxy" }
synctv-livestream = { path = "synctv-livestream" }
synctv-sfu = { path = "synctv-sfu" }

