[workspace]
members = [
    # SyncTV crates
    "synctv-proto",
    "synctv-core",
    "synctv-proxy",
    "synctv-api",
    "synctv-livestream",
    "synctv-cluster",
    "synctv-media-providers",
    "synctv",
    "synctv-sfu",
    # xiu consolidated crate
    "synctv-xiu",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["SyncTV Contributors"]
license = "MIT OR Apache-2.0"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.49", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "io-util",
    "time",
    "sync",
    "signal",
    "fs",
] }
tokio-util = { version = "0.7", features = ["codec", "io", "rt"] }
tokio-stream = "0.1"

# gRPC & Protobuf
tonic = { version = "0.14", default-features = false, features = [
    "transport",
    "tls-native-roots",
    "codegen",
    "server",
    "router",
    "channel",
] }
tonic-web = "0.14"
tonic-reflection = "0.14"
tonic-health = "0.14"
tonic-build = "0.14"
tonic-prost = "0.14"
tonic-prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"

# HTTP Framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = { version = "0.5", features = [
    "util",
    "timeout",
    "limit",
    "load-shed",
] }
tower-http = { version = "0.6", features = [
    "trace",
    "compression-full",
    "limit",
    "timeout",
    "cors",
] }
hyper = { version = "1.8", default-features = false, features = [
    "http1",
    "http2",
    "server",
    "client",
] }
reqwest = { version = "0.13", default-features = false, features = [
    "json",
    "cookies",
    "rustls",
    "query",
    "form",
] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
    "json",
    "macros",
] }
sea-query = "0.32"

# Redis
redis = { version = "1.0", features = [
    "tokio-comp",
    "connection-manager",
    "streams",
    "cluster",
    "tokio-rustls-comp",
    "script",
] }

# Security
argon2 = "0.5"
jsonwebtoken = { version = "10.3", features = ["aws_lc_rs"] }
oauth2 = "5.0"
aes-gcm = "0.10"
ammonia = "4.1"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
indexmap = "2"

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
dashmap = "6.1"
lru = "0.16"

# IDs & Crypto
nanoid = "0.4"
uuid = { version = "1.21", features = ["v4", "serde"] }
rand = "0.10"
base64 = "0.22"
humantime = "2.3"
hex = "0.4"

# WebRTC
webrtc = "0.17"

# STUN server (turn-rs, STUN-only mode)
turn-server = { git = "https://github.com/mycrl/turn-rs", default-features = false, features = [
    "udp",
] }

# Streaming (consolidated xiu crate)
synctv-xiu = { path = "synctv-xiu" }

# Object Storage
opendal = { version = "0.55", features = ["services-s3"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "fmt",
] }
tracing-appender = "0.2"

# Configuration
config = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Utilities
anyhow = "1.0"
thiserror = "2.0"
bytes = "1.11"
parking_lot = "0.12"
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"
hostname = "0.4"
url = "2.5"
percent-encoding = "2.3"
regex = "1.12"
paste = "1.0"
byteorder = "1.5"
http = "1.4"

# Monitoring
prometheus = "0.14.0"

# OpenAPI
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }

# Time
chrono = { version = "0.4", features = ["serde"] }


# Networking
ipnet = "2.11"

# Email
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "builder",
    "smtp-transport",
    "hostname",
    "tokio1",
] }
handlebars = "6.4"

# Initialization
ctor = "0.6"

# Resilience
governor = "0.10"
nonzero_ext = "0.3"
backon = "1.6"
failsafe = "1.3"

# Data Structures
growable-bloom-filter = "2.1"
async_singleflight = "0.6"

# HTTP Body
http-body-util = "0.1"

# Testing
mockall = "0.14"
wiremock = "0.6"
tempfile = "3.25"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# Internal workspace crates
synctv-proto = { path = "synctv-proto" }
synctv-core = { path = "synctv-core" }
synctv-api = { path = "synctv-api" }
synctv-cluster = { path = "synctv-cluster" }
synctv-media-providers = { path = "synctv-media-providers" }
synctv-proxy = { path = "synctv-proxy" }
synctv-livestream = { path = "synctv-livestream" }
synctv-sfu = { path = "synctv-sfu" }

[profile.dev]
debug = 0
strip = "symbols"

[profile.release]
opt-level = 3
debug = 0
lto = "fat"
codegen-units = 1
incremental = false
panic = "unwind"
strip = "symbols"
debug-assertions = false
overflow-checks = false
