[package]
name = "synctv-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
synctv-core.workspace = true
synctv-cluster.workspace = true
synctv-providers.workspace = true
synctv-stream.workspace = true
synctv-proto.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
futures.workspace = true

# gRPC
tonic.workspace = true
tonic-web.workspace = true
tonic-reflection.workspace = true
tonic-health.workspace = true
prost.workspace = true
prost-types.workspace = true

# HTTP
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
http-body-util = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Database
sqlx.workspace = true

# Redis
redis.workspace = true

# OpenAPI
utoipa.workspace = true
utoipa-swagger-ui.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
hostname.workspace = true
base64.workspace = true
uuid.workspace = true
url = "2.5"

# Time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Configuration
config.workspace = true
clap.workspace = true
once_cell.workspace = true

[dev-dependencies]
wiremock.workspace = true
