[package]
name = "synctv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
synctv-proto = { path = "../synctv-proto" }
synctv-media-providers = { path = "../synctv-media-providers" }

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# gRPC
tonic.workspace = true
tonic-health.workspace = true

# Database
sqlx.workspace = true
sea-query = "0.30"

# Redis
redis.workspace = true

# Security
argon2.workspace = true
jsonwebtoken.workspace = true
oauth2.workspace = true
aes-gcm.workspace = true
ammonia.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true

# Caching
moka.workspace = true
dashmap.workspace = true
growable-bloom-filter = "2.1"

# IDs & Crypto
nanoid.workspace = true
uuid.workspace = true
rand.workspace = true
md5.workspace = true
humantime.workspace = true
hex.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
once_cell.workspace = true
ctor = "0.2"
paste = "1.0"
url.workspace = true
regex.workspace = true

# HTTP Client
reqwest.workspace = true
http = "1.0"

# Resilience
tower = "0.5"
tower-http = { version = "0.5", features = ["timeout", "trace"] }
futures-util = "0.3"

# Time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
log.workspace = true

# Configuration
config.workspace = true
prometheus = "0.14.0"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }
handlebars = "5.1"

# WebRTC/TURN credentials
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"

# STUN protocol (use mature implementation)
bytecodec = "0.4"
stun_codec = "0.3"

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
rsa = "0.9"
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "auth_service"
harness = false
