[package]
name = "synctv-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
synctv-proto.workspace = true
synctv-media-providers.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# gRPC
tonic.workspace = true
tonic-health.workspace = true

# Database
sqlx.workspace = true
sea-query.workspace = true

# Redis
redis.workspace = true

# Security
argon2.workspace = true
jsonwebtoken.workspace = true
oauth2.workspace = true
aes-gcm.workspace = true
ammonia.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Caching
moka.workspace = true
dashmap.workspace = true
growable-bloom-filter.workspace = true
async_singleflight.workspace = true

# IDs & Crypto
nanoid.workspace = true
uuid.workspace = true
rand.workspace = true
sha2.workspace = true
humantime.workspace = true
hex.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
ctor.workspace = true
paste.workspace = true
url.workspace = true
regex.workspace = true
ipnet.workspace = true

# HTTP Client
reqwest.workspace = true
http.workspace = true

# Resilience
tower.workspace = true
tower-http.workspace = true
governor.workspace = true
nonzero_ext.workspace = true
backon.workspace = true
failsafe.workspace = true
futures-util.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Configuration
config.workspace = true
prometheus.workspace = true

# Email
lettre.workspace = true
handlebars.workspace = true

# Misc
base64.workspace = true

# STUN server (turn-rs with STUN-only config)
turn-server.workspace = true

[lints]
workspace = true

[dev-dependencies]
mockall.workspace = true
tokio = { workspace = true, features = ["test-util"] }
criterion.workspace = true
rand.workspace = true

[[bench]]
name = "auth_service"
harness = false
