[package]
name = "synctv-livestream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal
synctv-core.workspace = true
synctv-cluster.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# HTTP Framework
axum.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio-stream.workspace = true

# Streaming
synctv-xiu = { workspace = true, features = ["oss"] }

# Redis
redis.workspace = true

# Caching
moka.workspace = true
dashmap.workspace = true

# HTTP Client (for HTTP-FLV pulling)
reqwest.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
parking_lot.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
hostname.workspace = true
uuid.workspace = true
nanoid.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Crypto
subtle.workspace = true
rand.workspace = true

# JWT
jsonwebtoken.workspace = true

# Configuration
config.workspace = true
clap.workspace = true

[lints]
workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true
serde_urlencoded = "0.7"
