[package]
name = "synctv-media-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "media-provider-server"
path = "src/bin/media-provider-server.rs"

[dependencies]
# Async
tokio.workspace = true
async-trait.workspace = true

# HTTP Client
reqwest.workspace = true

# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true
url.workspace = true
subtle.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
