[package]
name = "synctv-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
tonic-build = { workspace = true }
