[package]
name = "synctv-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls", "stream"], default-features = false }
futures.workspace = true
url.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
synctv-core = { path = "../synctv-core" }
