[package]
name = "synctv-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
axum.workspace = true
reqwest = { workspace = true, features = ["stream"] }
futures.workspace = true
url.workspace = true
percent-encoding.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["time"] }
tracing.workspace = true
synctv-core.workspace = true
