[package]
name = "synctv-sfu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# WebRTC
webrtc = "0.11"

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
futures.workspace = true

# Data structures
dashmap.workspace = true
parking_lot.workspace = true

# IDs
uuid.workspace = true
nanoid.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# Utilities
bytes.workspace = true
