[package]
name = "synctv-xiu"
description = "Consolidated streaming library: RTMP, HLS, HTTP-FLV protocols with FLV/MPEG-TS containers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
oss = ["dep:opendal"]

[dependencies]
# Byte manipulation
byteorder = "1.4.2"
bytes = "1.9"

# Randomness
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"

# Logging
log = "0.4"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "raw_value", "std"] }
indexmap = "1.9.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Concurrency
dashmap = "6.0"
parking_lot = "0.12"

# IDs
nanoid = "0.4"

# HTTP
axum = { version = "0.7", features = ["macros"] }

# Object storage (optional, behind `oss` feature)
opendal = { version = "0.49", features = ["services-s3"], optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.41", features = ["full", "macros", "rt-multi-thread"] }
