[package]
name = "synctv-xiu"
description = "Consolidated streaming library: RTMP, HLS, HTTP-FLV protocols with FLV/MPEG-TS containers"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = []
oss = ["dep:opendal"]

[dependencies]
# Byte manipulation
byteorder = "1.4.2"
bytes.workspace = true

# Randomness
rand.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async runtime
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true

# Logging
tracing.workspace = true

# Serialization
serde = { workspace = true, features = ["rc"] }
serde_json.workspace = true
indexmap.workspace = true

# Time
chrono.workspace = true

# Crypto
hmac.workspace = true
sha2.workspace = true
hex.workspace = true

# Concurrency
dashmap.workspace = true
parking_lot.workspace = true
lru.workspace = true

# IDs
nanoid.workspace = true
uuid.workspace = true

# HTTP
axum.workspace = true

# Object storage (optional, behind `oss` feature)
opendal = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["test-util"] }
