[package]
name = "synctv"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "synctv"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# Internal workspace libraries
synctv-core.workspace = true
synctv-api.workspace = true
synctv-livestream.workspace = true
synctv-cluster.workspace = true
synctv-sfu.workspace = true

# Async
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true

# HTTP Framework
axum.workspace = true

# Database
sqlx.workspace = true

# Redis
redis.workspace = true

# Utilities
anyhow.workspace = true
chrono.workspace = true
dashmap.workspace = true
hostname.workspace = true
nanoid.workspace = true
parking_lot.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
