[package]
name = "xiu-httpflv"
description = "HTTP-FLV streaming session: subscribes to StreamHub and sends FLV over HTTP"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
streamhub = { path = "../../library/streamhub" }
xflv = { path = "../../library/container/flv" }

bytes = "1.9"
tokio = { version = "1.41", features = ["sync"] }
tracing = "0.1"
anyhow = "1.0"
